authorization of every api with jwt token

--- a/RideSimulator/appsettings.json
+++ b/RideSimulator/appsettings.json
@@ -8,5 +8,11 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=LAPTOP-IDKBJF6U;Database=RideSimulator;Trusted_Connection=True;TrustServerCertificate=True"
+  },
+  "Jwt": {
+    "Key": "JskN7U3WyDO5eQOb3A1z",
+    "Issuer": "https://localhost:7207",
+    "Audience": "https://localhost:7207",
+    "ExpireDays": "1"
   }
 }
